[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.206"
serde_json = "1.0.125"
serde_derive = "1.0.193"
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
time = "0.3.36"
rand = "0.8.5"

[dev-dependencies]
axum-test = "15.3.1"
