[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
serde = "1.0.208"
serde_json = "1.0.138"
serde_derive = "1.0.217"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
rand = "0.9.0"

[dev-dependencies]
axum-test = "17.2.0"
